# mitre-datalog-fork

./: .gitignore  CMakeLists.txt  Readme.md
examples/: readme.md
src/: CMakeLists.txt  datalog.c
